Fix bug 131238 (Right click in history playlist shows wrong column) in KDE 4.

BUG:131238

svn path=/trunk/KDE/kdemultimedia/juk/; revision=679763