playlist.cpp
@@ -2148,7 +2148,7 @@ void Playlist::slotShowRMBMenu(Q3ListViewItem *item, const QPoint &point, int co
 
     if(showEdit)
         m_rmbMenu->changeItem(m_rmbEditID,
-                i18n("Edit '%1'", columnText(column)));
+                i18n("Edit '%1'", columnText(column + columnOffset())));
 
     m_rmbMenu->setItemVisible(m_rmbEditID, showEdit);
 
@@ -2163,7 +2163,7 @@ void Playlist::slotShowRMBMenu(Q3ListViewItem *item, const QPoint &point, int co
     action("removeCover")->setEnabled(file.coverInfo()->hasCover());
 
     m_rmbMenu->popup(point);
-    m_currentColumn = column;
+    m_currentColumn = column + columnOffset();
 }
 
 void Playlist::slotRenameTag()
